2001-03-22  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-save-list): Use 'pp' if have pp().
	Bind 'print-length' and 'print-level' to nil.

2001-03-22  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* w3m.el: Structure of hash database of arrived urls is
	changed.
	(w3m-arrived-setup): Follow change of DB structure.
	(w3m-arrived-shutdown): Likewise.
	(w3m-arrived-add): Likewise, and argument spec is changed.
	(w3m-arrived-time): New function.
	(w3m-arrived-seq, w3m-arrived-put-title, w3m-arrived-arrived-time,
	w3m-arrived-put-arrived-time): Removed.
	(w3m-goto-url): Follow change of `w3m-arrived-add'.

2001-03-22  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-goto-url): Refresh the visibility of toolbar when
	XEmacs is running.

2001-03-22  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* w3m.el (w3m-url-to-file-name): Fix bug reported in
	[emacs-w3m:00305].
	(w3m-goto-url): Set the value interpreted as a directory to
	`default-directory'.

2001-03-21  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-about-db-history): Use w3m-arrived-arrived-time().
	(w3m-goto-url): Put arrived time to w3m-arrived-db.
	(w3m-arrived-shutdown): Handling 'arrived-time in w3m-arrived-db.
	(w3m-arrived-setup): Ditto.
	(w3m-arrived-put-title): New function.
	(w3m-arrived-arrived-time): Ditto.

2001-03-21  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* w3m.el (w3m-arrived-shutdown): Check sites which are arrived on
	the other emacs process.

2001-03-21  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-input-url): 'nil' don't add candidates.

2001-03-21  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* w3m-antenna.el (w3m-antenna-make-summary-function): Default
	value is changed.
	(w3m-antenna-make-summary-like-natsumikan): New function.

	* w3m.el (w3m-about-db-history-sort-time): Removed.
	(w3m-about-db-history): Use `w3m-time-newer-p' instead of
	`w3m-about-db-history-sort-time'.
